@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.afl-video" name="AFL Video" version="0.6" provider-name="Andy Botting">
+<addon id="plugin.video.afl-video" name="AFL Video" version="0.7" provider-name="Andy Botting">
    <requires>
       <import addon="xbmc.python" version="1.0"/>
       <import addon="script.module.simplejson"/>
+      <import addon="script.module.beautifulsoup"/>
    </requires>
    <extension point="xbmc.python.pluginsource" provides="video" library="default.py">
     <provides>video</provides>
