@@ -1,3 +1,7 @@
+[B]Version 0.7[/B]
+- Update for 2013 season
+- Note: match replays now geoblocked :(
+
 [B]Version 0.6[/B]
 - Add 'Favourite Team' option
 - Add settings to main menu
